WIP Entity-Component-System refactoring