@@ -20,15 +20,26 @@
  */
 package jchess;
 
-import java.awt.*;
+import jchess.Moves.castling;
+import jchess.piece.Bishop;
+import jchess.piece.King;
+import jchess.piece.Knight;
+import jchess.piece.Pawn;
+import jchess.piece.Piece;
+import jchess.piece.Queen;
+import jchess.piece.Rook;
+
+import javax.swing.JPanel;
+import java.awt.Color;
+import java.awt.Font;
 import java.awt.Graphics;
+import java.awt.Graphics2D;
+import java.awt.Image;
+import java.awt.Point;
+import java.awt.RenderingHints;
 import java.awt.event.ComponentEvent;
 import java.awt.image.BufferedImage;
 import java.util.ArrayList;
-import java.util.Iterator;
-import javax.swing.JPanel;
-import jchess.Moves.castling;
-import jchess.piece.*;
 
 /** Class to represent chessboard. Chessboard is made from squares.
  * It is setting the squers of chessboard and sets the pieces(pawns)
@@ -58,7 +69,7 @@ public class Chessboard extends JPanel
     public static final int img_y = img_x;//image y position (used in JChessView class!)
     public static final int img_widht = 480;//image width
     public static final int img_height = img_widht;//image height
-    private ArrayList moves;
+    private ArrayList<Square> moves;
     private Settings settings;
     public King kingWhite;
     public King kingBlack;
@@ -732,10 +743,8 @@ public class Chessboard extends JPanel
                 this.moves = this.squares[(int) (this.active_x_square - 1)][(int) (this.active_y_square - 1)].piece.allMoves();
             }
 
-            for (Iterator it = moves.iterator(); moves != null && it.hasNext();)
-            {
-                Square sq = (Square) it.next();
-                g2d.drawImage(able_square, 
+            for (Square sq : moves) {
+                g2d.drawImage(able_square,
                         (sq.pozX * (int) square_length) + topLeftPoint.x,
                         (sq.pozY * (int) square_length) + topLeftPoint.y, null);
             }
@@ -832,7 +841,7 @@ public class Chessboard extends JPanel
         {
             for (int i = 1; i <= 8; i++)
             {
-                uDL2D.drawString(new Integer(i).toString(), 3 + (labelHeight / 3), (square_height * (i - 1)) + addX);
+                uDL2D.drawString(Integer.valueOf(i).toString(), 3 + (labelHeight / 3), (square_height * (i - 1)) + addX);
             }
         }
         else
@@ -840,7 +849,7 @@ public class Chessboard extends JPanel
             int j = 1;
             for (int i = 8; i > 0; i--, j++)
             {
-                uDL2D.drawString(new Integer(i).toString(), 3 + (labelHeight / 3), (square_height * (j - 1)) + addX);
+                uDL2D.drawString(Integer.valueOf(i).toString(), 3 + (labelHeight / 3), (square_height * (j - 1)) + addX);
             }
         }
         uDL2D.dispose();
